<resources>
    <string name="app_name">Shoe Store App</string>

    <!-- Strings related to login -->
    <string name="login_header_text">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log-in</string>
    <string name="action_sign_in_existing">Use Existing Account</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_password">Enter Password:</string>


    <!-- Strings related to Welcome Screen -->
    <string name="welcome_text1">Welcome to Shoe Store</string>
    <string name="welcome_text2">A shoe store or shoe shop is a type of retailer that specializes
        in selling shoes. From slippers to athletic shoes to boots, the store could also sell shoe
        accessories, including insoles, shoelaces, shoe horns, shoe polish, etc.
        In addition, shoe stores may provide clothing and fashion accessories, such as handbags,
        sunglasses, backpacks, socks, and hosiery.</string>
    <string name="welcome_button_text">See Instructions</string>


    <!-- Strings related to Instruction Screen -->
    <string name="instructions_header_text">Instructions:</string>
    <string name="instruction_1_text">1.Navigate to Shoe List screen. You can view all you shoe inventory.</string>
    <string name="instruction_2_text">2.Browse through all the shoes in the store by swiping up or swiping down</string>
    <string name="instruction_3_text">3.Click + Button to add new shoe in your inventory. Enter the details and click on Save</string>
    <string name="instruction_button_text">View Store Items</string>

    <!-- Strings related to Shoe List Screen -->
    <string name="add_shoe_text">floatingActionButton</string>

    <!-- Strings related to Shoe Details Screen -->
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="enter_name">Enter Shoe Name:</string>
    <string name="shoe_name">Shoe Name Here....</string>
    <string name="enter_company">Enter Company Name:</string>
    <string name="company_name">Company Name Here....</string>
    <string name="enter_shoe_size">Enter Shoe Size:</string>
    <string name="enter_size">Enter Size Here....</string>
    <string name="enter_description">Enter Shoe Description:</string>
    <string name="shoe_description">Enter Description Here .....</string>
    <string name="default_shoename">Nike Air Max Plus 1</string>
    <string name="default_company">Nike</string>
    <string name="default_shoesize">6.0</string>
    <string name="default_shoedescription">The Nike Air Max Plus brings you legendary "Tuned" Air cushioning for extra comfort.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout_text">Logout</string>

</resources>