<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoelist.ShoeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoeDetailMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextShoeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:text="@string/default_shoename"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextShoeName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextShoeName" />

        <EditText
            android:id="@+id/editTextTextCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_border"
            android:text="@string/default_company"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/company_label"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCompanyName" />

        <EditText
            android:id="@+id/editTextShoeSizeDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_border"
            android:text="@string/default_shoesize"
            android:ems="10"
            android:hint="@string/enter_size"
            android:inputType="numberDecimal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/size_label"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enter_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextShoeSizeDecimal"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeSizeDecimal" />

        <EditText
            android:id="@+id/editTextTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_border"
            android:text="@string/default_shoedescription"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/shoe_description"
            android:inputType="textMultiLine"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_save"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextDescription"
            app:layout_constraintVertical_bias="0.13" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="@+id/button_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>