<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".instructions.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ContraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/intsruction_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/adamina"
            android:text="@string/instructions_header_text"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intsruction_header">

            <TextView
                android:id="@+id/instruction_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_1_text"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <TextView
                android:id="@+id/instruction_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_2_text"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:id="@+id/instruction_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_3_text"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/instruction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_button_text"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>